sw_apps :zynqmp_fsbl: Separate Extra compiler flags from debug symbols in Makefile
This patch separates extra compiler flags from CFLAGS, which define debug symbols.
This allows command line defining of DEBUG SYSMBOLS for versionless build.

Signed-off-by: Vikram Sreenivasa Batchali <bvikram@xilinx.com>
Acked-by: Love Kumar <love.kumar@xilinx.com>

--- a/lib/sw_apps/zynqmp_fsbl/src/Makefile
+++ b/lib/sw_apps/zynqmp_fsbl/src/Makefile
@@ -69,7 +69,7 @@ S_SOURCES += xfsbl_translation_table_a53_$(A53_STATE).S
 OBJS += $(patsubst %.S, %.o, $(S_SOURCES))
 CROSS   :=
 CFLAGS =  -Wall -O0 -g3 -fmessage-length=0
-ECCFLAGS = -march=armv8-a -DARMA53_$(A53_STATE) -Os -flto -ffat-lto-objects
+ECFLAGS = -march=armv8-a -DARMA53_$(A53_STATE) -Os -flto -ffat-lto-objects
 EXEC := ron_a53_fsbl.elf
 INCLUDEPATH := -I$(BSP_DIR)/psu_cortexa53_0/include -I. -I../misc/$(BOARD)/$(PROC) -I../misc/$(BOARD)
 LIBPATH := $(BSP_DIR)/psu_cortexa53_0/lib
