xilisf: Fixed the compilation warnings for ARMCC compiler
warning fixed for xilisf is,
Warning:  #260-D: explicit type is missing ("int" assumed)
 "static inline void XIsf_SetTransferMode(XIsf *InstancePtr, u8 Mode)"
         ^

Signed-off-by: Tejas Prajapati Rameshchandra <tejaspra@xilinx.com>

Acked-for-series: Naga Sureshkumar Relli <nagasure@xilinx.com>

--- a/lib/sw_services/xilisf/src/Makefile
+++ b/lib/sw_services/xilisf/src/Makefile
@@ -31,8 +31,18 @@ ARCHIVER=
 CP=cp
 COMPILER_FLAGS=
 EXTRA_COMPILER_FLAGS=
-EXTRA_ARCHIVE_FLAGS=rc
 LIB=libxilisf.a
+
+ifeq ($(notdir $(COMPILER)) , iccarm)
+	EXTRA_ARCHIVE_FLAGS=--create
+else
+ifeq ($(notdir $(COMPILER)) , armcc)
+	EXTRA_ARCHIVE_FLAGS=--create
+else
+	EXTRA_ARCHIVE_FLAGS=rc
+endif
+endif
+
 
 RELEASEDIR=../../../lib
 INCLUDEDIR=../../../include
