sw_apps: zynqmp_pmufw: Fix pmufw compilation issue with vless
This patch fix pmfw compilation issues with vless flow.

Signed-off-by: Nava kishore Manne <nava.manne@xilinx.com>
Acked-by: Mounika Grace Akula <makula@xilinx.com>

Acked-by: Mounika Grace Akula <makula@xilinx.com>

--- a/lib/sw_apps/zynqmp_pmufw/src/Makefile
+++ b/lib/sw_apps/zynqmp_pmufw/src/Makefile
@@ -3,7 +3,7 @@
 CC := mb-gcc
 CC_FLAGS := -MMD -MP    -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v9.2 -mxl-soft-mul
 CFLAGS := -Os
-LN_FLAGS := -Wl,--start-group,-lxil,-lgcc,-lc,--end-group -Wl,--start-group,-lxilfpga,-lxilsecure,-lxil,-lgcc,-lc,--end-group -nostartfiles -Wl,--gc-sections
+LN_FLAGS := -Wl,--start-group,-lxil,-lgcc,-lc,--end-group -Wl,--start-group,-lxilfpga,-lxilsecure,-lxilskey,-lxil,-lgcc,-lc,--end-group -nostartfiles -Wl,--gc-sections
 
 c_SOURCES := $(wildcard *.c)
 S_SOURCES := $(wildcard *.S)
