--- a/lib/sw_services/xilmem/src/CMakeLists.txt
+++ b/lib/sw_services/xilmem/src/CMakeLists.txt
@@ -40,7 +40,8 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR}/include)
 enable_language(C ASM)
 if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblaze")
 add_subdirectory(microblaze)
-elseif (("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53") OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa72"))
+elseif (("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53") 
+	OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa72"))
 add_subdirectory(ARMv8)
 else()
 add_subdirectory(ARMv7)
